<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">GATE</string>

    <string name="title_profile">Profile</string>
    <string name="title_feed">Feed</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_bookmarks">Bookmarks</string>

    <!--                Login                -->

    <string name="userHint">ORCID</string>
    <string name="passHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register with orcid</string>
    <string name="forgotPass">Forgot your <b>password</b>?
    </string>

    <!--                Register_Page1            -->
    <string name="registerOrcidText">ORCID Information</string>
    <string name="registerUploadPhoto">Upload Picture</string>
    <string name="registerORCIDHint">ORCID</string>
    <string name="registerPassHint">Password</string>
    <string name="registerConfirmPassHint">Confirm Password</string>

    <string name="registerPersInfoText">Personal Information</string>
    <string name="registerFirstNameHint">First Name</string>
    <string name="registerLastNameHint">Last Name</string>
    <string name="registerInstitutionHint">Institution</string>
    <string name="registerEmailHint">E-mail</string>
    <string name="registerInvestigationHint">Area of Investigation</string>
    <string name="registerResearchCenter">Research Center</string>

    <string name="registerPage1of3">1/3</string>
    <string name="registerNextPage">NEXT</string>

    <string name="registerResearchInterText">Research Interests</string>
    <string name="registerResearchSearch">Search</string>
    <string name="registerButtonPlaceholderText">Placeholder</string>


    <string name="registerUserNameHint">Username</string>



    <!--            Profile                 -->
    <string name="profileImageDescription">User picture</string>
    <string name="profileUserName">Username</string>
    <string name="profileName">Name</string>
    <string name="profileInstitution">Institution</string>
    <string name="profileResearchUnit">Research Unit</string>
    <string name="profileResearchCenter">Research Center</string>
    <string name="profileResearchInterests">Research Interests</string>


    <!--            Bookmarks               -->
    <string name="bookmarkName">Name</string>
    <string name="bookmarkURL">URL</string>
    <string name="bookmarkTags">Tags</string>


    <!--            Discovery               -->
    <string name="discoveryContact">Contact List</string>
    <string name="discoveryAdd">Add Contact</string>
    <string name="discoverySearch">Search</string>
    <string name="discoveryUserName">Username</string>
    <string name="discoveryUserEmail">Email</string>
    <string name="discoveryLastSeen">Last Seen Online</string>
    <string name="discoveryName">Name</string>
    <string name="discoveryInstitution">Institution</string>
    <string name="discoveryResearchUnit">Research Unit</string>
    <string name="discoveryResearchCenter">Research Center</string>
    <string name="discoveryResearchInterests">Research Interests</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">d6LPbblcvvauDjplDjlr7Rnha</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">mRY55iuOOCrSZOuAjkhTzi7U3hsMABOF94vHfR9Qg6xVXaqUCc</string>

    <string name="allPlaceholderText">[PH]toChange</string>


</resources>
