<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Menus.Login"
        android:descendantFocusability="beforeDescendants"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/login_background">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.125"
            android:text="@string/app_name"
            android:textSize="75sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:fontFamily="@font/helveticaroman"
            android:id="@+id/loginNameText"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.375"
            android:id="@+id/loginUserInput"

            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/userHint"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="16"
                android:drawableStart="@drawable/login_user"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.465"
            android:id="@+id/loginPassInput"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/passHint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableStart="@drawable/login_pass"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>


    <android.widget.Button
            android:layout_width="295dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.60"
            android:background="@drawable/button_white_center"
            android:onClick="OnClick"
            android:text="@string/loginButton"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/loginLogInButton"/>


    <android.widget.Button
            android:layout_width="295dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.675"
            android:paddingStart="55dp"
            android:paddingEnd="55dp"
            android:drawableStart="@drawable/login_orcid_icon"
            android:background="@drawable/button_white_center"
            android:onClick="OnClick"
            android:text="@string/registerButton"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/loginRegisterButton" android:textAlignment="viewStart"/>


</android.support.constraint.ConstraintLayout>