<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Menus.Register"
        android:descendantFocusability="afterDescendants"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/register_background">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:layout_constraintHorizontal_bias="0.935"
            app:srcCompat="@drawable/all_cancel"
            android:onClick="OnClick"
            android:id="@+id/registerCancel"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.125"
            android:text="@string/registerOrcidText"
            android:textSize="35sp"
            android:textAlignment="center"
            android:id="@+id/registerAccInfoText"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:id="@+id/registerORCID"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerORCIDHint"
                android:drawableStart="@drawable/login_user"
                android:inputType="number"
                android:maxLength="16"
                android:visibility="visible"
                android:singleLine="true"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.50"
            android:id="@+id/registerPass"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerPassHint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableStart="@drawable/login_pass"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.60"
            android:id="@+id/registerConfirmPass"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerConfirmPassHint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableStart="@drawable/login_pass"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintHorizontal_bias="0.90"
            android:text="@string/registerNextPage"
            android:textSize="30sp"
            android:onClick="OnClick"
            android:id="@+id/registerNextPage1"/>

</android.support.constraint.ConstraintLayout>
        <!-- TODO change next to Register_Page1 -->