<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Menus.Register_Page3"
        android:descendantFocusability="afterDescendants"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/register_background">


    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:layout_constraintHorizontal_bias="0.065"
            app:srcCompat="@drawable/all_back"
            android:onClick="registerP3OnClick"
            android:id="@+id/registerP3Back"/>


    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:layout_constraintHorizontal_bias="0.935"
            app:srcCompat="@drawable/all_cancel"
            android:onClick="registerP3OnClick"
            android:id="@+id/registerP3Cancel"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.125"
            android:text="@string/registerAccInfoText"
            android:textSize="35sp"
            android:textAlignment="center"
            android:id="@+id/registerAccInfoText"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.50"
            android:id="@+id/registerUserName"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerUserNameHint"
                android:singleLine="true"
                android:drawableStart="@drawable/login_user"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.60"
            android:id="@+id/registerPass"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerPassHint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableStart="@drawable/login_pass"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.70"
            android:id="@+id/registerConfirmPass"
            android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/registerConfirmPassHint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableStart="@drawable/login_pass"
                android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.widget.Button
            android:layout_width="295dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.85"
            android:background="@drawable/button_white_outline"
            android:text="@string/registerButton"
            android:textSize="20sp"
            android:onClick="registerP3OnClick"
            android:id="@+id/registerRegisterButton"/>

    <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:srcCompat="@drawable/bvn_profile"
            android:id="@+id/registerUserPhoto"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.41"
            android:text="@string/registerUploadPhoto"
            android:textSize="15sp"
            android:onClick="registerP3OnClick"
            android:id="@+id/registerUploadPhoto"/>


</android.support.constraint.ConstraintLayout>